chore: unignore mallet model

--- a/Ennichi/.gitignore
+++ b/Ennichi/.gitignore
@@ -1,4 +1,7 @@
-Assets/Models/
+Assets/Models/Festival.fbx
+Assets/Models/Festival.fbx.meta
+Assets/Models/Textures/
+Assets/Models/Textures.meta
 .idea/
 .vscode/
 .plastic/
